@@ -1,0 +1,7 @@
+.mapillary {
+	> iframe {
+		border: 0;
+		float: left;
+		padding-right: 1em;
+	}
+}
