@@ -1,4 +1,0 @@
-#mapillary {
-	float: left;
-	padding-right: 5px;
-}
